--- a/overview.tex
+++ b/overview.tex
@@ -9,7 +9,7 @@ Synthetic biology designs can be described using:
 \end{itemize}
 % Mike Bissell - FIXME. "The way" and "the..behavior" are not really "terms" or "descriptions," so the preceding sentence could really use some work.
 In broad strokes, the prior SBOL 1.1 standard focused on conveying physical, structural information, whereas SBOL 2 expands the scope to include functional aspects as well. 
-The physical information about a designed genetic construct includes the order of its constituents and their descriptions. Specifying the exact locations of these constituents and their sequences allow genetic constructs to be defined unambiguously and reused in other designs. SBOL 2 extends SBOL 1.1 in several ways: it extends physical descriptions to include entities beyond DNA sequences, and it supports functional descriptions of designs. 
+The physical information about a designed genetic construct includes the order of its constituents and their descriptions. Specifying the exact locations of these constituents and their sequences allow genetic constructs to be defined unambiguously and reused in other designs. SBOL 2 extended SBOL 1.1 in several ways: it extends physical descriptions to include entities beyond DNA sequences, and it added support for functional descriptions of designs. 
 % Mike Bissell - Fixed what seemed to be missing words in the first half of the paragraph. Swapped in "supports" in place of "allows for". More consistent pluralization.
 
 As an example, consider the design of an expression cassette, such as the one found in the plasmid pUC18~\cite{L08752.1}. This device is designed to detect successful versus unsuccessful molecular cloning. 
@@ -18,25 +18,30 @@ These parts have specific component-level interactions with IPTG and X-gal, as w
 
 Knowledge of how such a device functions within the context of a host and how it might be adapted to new experimental applications has generally been passed on through working with fellow scientists or reading articles in papers and books. 
 But there has been no systematic way to communicate the integration of sequences with functional designs, so users typically have had to look in many different places to develop an understanding of a system.  
-The SBOL 2 standard allows designers to describe these functional characteristics and connect them to the physical parts and sequences that make up the design. 
+The SBOL 2 standard enabled designers to describe these functional characteristics and connect them to the physical parts and sequences that make up the design. 
 
-SBOL 2 includes two main classes that match the structural/functional distinction above:
+SBOL 2 included two main classes that match the structural/functional distinction above:
+
 \begin{itemize}
-\item The \sbol{ComponentDefinition} object describes the physical aspects of the designed system, such as its DNA or RNA sequences, and the physical relationships among sub-components, as when one sequence contains another as a sub-sequence.
-\item The \sbol{ModuleDefinition} object describes interactions of the designed system, such as specific binding relationships and repression and activation relationships. 
+\item The \sbol{ComponentDefinition} object described the physical aspects of the designed system, such as its DNA or RNA sequences, and the physical relationships among sub-components, as when one sequence contains another as a sub-sequence.
+\item The \sbol{ModuleDefinition} object described interactions of the designed system, such as specific binding relationships and repression and activation relationships. 
 \end{itemize}
 
-\ref{images:overview1} shows a simplified view of these classes, as well as other helper classes in SBOL. To continue with the pUC18 example, the description would begin with a top-level \sbol{ModuleDefinition}.  
-The \sbol{ModuleDefinition} specifies the structural elements that make up the cassette by referencing a number of \sbol{ComponentDefinition} objects. These would include the DNA component for the promoter and the small molecule component for IPTG, for example.  
-The \sbol{ComponentDefinition} objects can be organized hierarchically.  
-For example, the plasmid \sbol{ComponentDefinition} might reference \sbol{ComponentDefinition}s for the promoter, coding sequence, etc.  
-Each \sbol{ComponentDefinition} object can also include the actual \sbol{Sequence} information (if available), as well as \sbol{SequenceAnnotation} objects that identify the locations of the promoters, coding sequences, etc., on the \sbol{Sequence}.  
-In order to specify functional information, the \sbol{ModuleDefinition} can specify \sbol{Interaction} objects that describe any qualitative relationships among components, such as how IPTG and X-gal interact with the gene products.  Finally, a \sbol{ModuleDefinition} object can point to a \sbol{Model} object that provides a reference to a complete computational model using a language such as SBML  ~\cite{SBML}, CellML ~\cite{CellML}, MATLAB ~\cite{matlab}, etc.  Finally, all the of elements of the genetic design can be grouped together within a \sbol{Collection}.
+In SBOL 3, these classes are merged into a single object called \sbol{Component} which describes both structural and functional aspects.
+
+%\ref{images:overview1} shows a simplified view of these classes, as well as other helper classes in SBOL.
+
+To continue with the pUC18 example, the description would begin with a top-level \sbol{Component}.  
+The top-level \sbol{Component} specifies the structural elements that make up the cassette by referencing a number of \sbol{SubComponent} objects. These would include the DNA component for the promoter and the small molecule component for IPTG, for example.  
+The \sbol{Component} objects can be organized hierarchically.  
+For example, the plasmid \sbol{Component} might reference \sbol{Component}s for the promoter, coding sequence, etc.  
+Each \sbol{Component} object can also include the actual \sbol{Sequence} information (if available), as well as \sbol{SequenceAnnotation} objects that identify the locations of the promoters, coding sequences, etc., on the \sbol{Sequence}.  
+In order to specify functional information, the \sbol{Component} can also specify \sbol{Interaction} objects that describe any qualitative relationships among components, such as how IPTG and X-gal interact with the gene products.  Finally, a \sbol{Component} object can point to a \sbol{Model} object that provides a reference to a complete computational model using a language such as SBML  ~\cite{SBML}, CellML ~\cite{CellML}, MATLAB ~\cite{matlab}, etc.  Finally, all the of elements of the genetic design can be grouped together within a \sbol{Collection}.
 
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[scale=0.7]{images/OverviewFigforSpec-v7.png}
-\caption{Main classes of information represented by the SBOL standard, and their relationships.  Red boxes are classes from the SBOL 1.1 that focused on structure, whereas blue classes are some of the new classes that support the functional aspects of designs.}
+\includegraphics[scale=0.7]{images/datamodel.pdf}
+\caption{Main classes of information represented by the SBOL standard, and their relationships.  Green boxes are ``top level'' objects, and yellow boxes are child objects.}
 \label{images:overview1}
 \end{center}
 \end{figure}
@@ -45,14 +50,6 @@ Whereas \ref{images:overview1} provides a broad overview of SBOL, \ref{images:ov
 \sbol{ComponentDefinition} objects, because these can stand on their own. All of the supporting classes (in orange) have to be owned by some top-level class, directly or indirectly. 
 
 % Figure~\ref{images:overview2} provides a more detailed view the the class structure for the SBOL 2.0 data model.  The main, or \emph{top level} classes, are \sbol{Collection}, \sbol{ComponentDefinition}, sbol{Sequence}, \sbol{ModuleDefinition}, and \sbol{Model}.  The key distinction of these classes is that they can stand alone and be referenced by other top level objects (see the dashed arrows between the green boxes).  The purpose of these classes is described above.  Each of these classes is assisted in their purpose by several \emph{child} classes.  The key distinction of a child object is that it is owned by its parent object, and if that parent object is removed, so is the child object.  This ownership is indicated using the solid arrows in the figure.  For example, a \sbol{ComponentDefinition} owns its \sbol{SequenceAnnotation}s.  
-
-\begin{figure}[ht]
-\begin{center}
-\includegraphics[scale=0.85]{images/OverviewFig2-v4.png}
-\caption{Main classes of information represented by the SBOL 2.x standard, and their relationships.  Green boxes are ``top level'' classes, while the other classes are in support of these classes. Solid arrows indicates ownership, whereas a dashed arrow indicates that one class refers to an object of another class.}
-\label{images:overview2}
-\end{center}
-\end{figure}
 
 \ref{images:overview2} additionally shows that when it is possible to incorporate a single object into multiple parents, we always incorporate that object by reference. We do not directly incorporate it by copy, because when an object is used many times, keeping many copies becomes spatially inefficient and difficult to maintain.
 Instead, each reference is handled by a pointer object. 
